--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Layout from "../layouts/Layout.astro";
+import Login from "../components/Login";
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="WordWise">
+  <div class="container mx-auto p-4">
+    <h1>Welcome to WordWise</h1>
+    <Login client:load />
+  </div>
 </Layout>
