P2: Create Login, Flashcard, Quiz

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Login from "../components/Login";
+
+console.log("PUBLIC_SUPABASE_URL:", import.meta.env.PUBLIC_SUPABASE_URL);
+console.log("PUBLIC_SUPABASE_KEY:", import.meta.env.PUBLIC_SUPABASE_KEY);
 ---
 
 <Layout title="WordWise">
