--- a/src/pages/learn.astro
+++ b/src/pages/learn.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Flashcard from "../components/Flashcard";
+import Quiz from "../components/Quiz";
 import type { Word } from "~/types";
 
 const response = await fetch("http://localhost:4321/api/words");
@@ -8,7 +9,12 @@ const words: Word[] = await response.json();
 ---
 
 <Layout title="Learn Words">
-  <div class="container mx-auto p-4 grid gap-4 md:grid-cols-2">
-    {words.map((word) => <Flashcard client:load word={word} />)}
+  <div class="container mx-auto p-4 grid gap-4">
+    <h1 class="text-2xl font-bold text-gray-900 dark:text-white">Flashcards</h1>
+    <div class="grid gap-4 md:grid-cols-2">
+      {words.map((word) => <Flashcard client:load word={word} />)}
+    </div>
+    <h1 class="text-2xl font-bold text-gray-900 dark:text-white mt-8">Quiz</h1>
+    <Quiz client:load words={words} />
   </div>
 </Layout>
