--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Login from "../components/Login";
-
-console.log("PUBLIC_SUPABASE_URL:", import.meta.env.PUBLIC_SUPABASE_URL);
-console.log("PUBLIC_SUPABASE_KEY:", import.meta.env.PUBLIC_SUPABASE_KEY);
 ---
 
-<Layout title="WordWise">
-  <div class="container mx-auto p-4">
-    <h1>Welcome to WordWise</h1>
+<Layout title="Vocabulary App">
+  <main class="container mx-auto p-4">
+    <h1 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">
+      Welcome to Vocabulary App
+    </h1>
     <Login client:load />
-  </div>
+  </main>
 </Layout>
